# python-project-49

./: .flake8  .gitignore  README.md  Readme.md  app.py  pyproject.toml  requirements.txt
brain_games/scripts/: brain_games.py
brain_games/scripts/games/: calculator_game.py  common.py  constants.py  exceptions.py  gcd.py  manager.py  mixins.py  odd_even.py  prime.py  sequence.py
games/: calculator_game.py  common.py  gcd.py  manager.py  mixins.py  odd_even.py  prime.py  sequence.py
