[tool.poetry]
name = "brain-games"
version = "0.1.0"
description = "Несколько игр для прокачки мозга"
authors = ["Vyacheslav Bogdanyonok <skavik46111@gmail.com>"]
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"
autoflake = "^2.0.1"
simple-term-menu = "^1.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
